[tool.poetry]
name = "hitster"
version = "0.1.0"
description = ""
authors = ["fjlein <fjlein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typst = "^0.13.0"
spotipy = "^2.25.1"
qrcode = "^8.0"
pillow = "^11.1.0"
matplotlib = "^3.10.1"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
